.metadata/.plugins/org.eclipse.cdt.ui/ball_feeder_dc_motor.build.log
17:23:50 **** Incremental Build of configuration Debug for project ball_feeder_dc_motor ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/system_stm32f1xx.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/system_stm32f1xx.d" -MT"Core/Src/system_stm32f1xx.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/system_stm32f1xx.o"
../Core/Src/main.c:64:1: error: unknown type name 'bool'
   64 | bool limit_switch = False;
      | ^~~~
../Core/Src/main.c:64:21: error: 'False' undeclared here (not in a function)
   64 | bool limit_switch = False;
      |                     ^~~~~
../Core/Src/main.c: In function 'HAL_GPIO_EXTI_Callback':
../Core/Src/main.c:96:18: error: 'true' undeclared (first use in this function)
   96 |   limit_switch = true;
      |                  ^~~~
../Core/Src/main.c:96:18: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c: In function 'set_stepper_direction':
../Core/Src/main.c:125:21: error: 'OUT_STEPPER_DIR_GPIO_Port' undeclared (first use in this function); did you mean 'OUT_SETPPER_DIR_GPIO_Port'?
  125 |   HAL_GPIO_WritePin(OUT_STEPPER_DIR_GPIO_Port, OUT_STEPPER_DIR_Pin, GPIO_PIN_SET);
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~
      |                     OUT_SETPPER_DIR_GPIO_Port
../Core/Src/main.c:125:48: error: 'OUT_STEPPER_DIR_Pin' undeclared (first use in this function); did you mean 'OUT_SETPPER_DIR_Pin'?
  125 |   HAL_GPIO_WritePin(OUT_STEPPER_DIR_GPIO_Port, OUT_STEPPER_DIR_Pin, GPIO_PIN_SET);
      |                                                ^~~~~~~~~~~~~~~~~~~
      |                                                OUT_SETPPER_DIR_Pin
../Core/Src/main.c: In function 'set_stepper_step':
../Core/Src/main.c:134:21: error: 'OUT_STEPPER_STEP_GPIO_Port' undeclared (first use in this function); did you mean 'OUT_STEPPER_EN_GPIO_Port'?
  134 |   HAL_GPIO_WritePin(OUT_STEPPER_STEP_GPIO_Port, OUT_STEPPER_STEP_Pin, GPIO_PIN_SET);
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
      |                     OUT_STEPPER_EN_GPIO_Port
../Core/Src/main.c:134:49: error: 'OUT_STEPPER_STEP_Pin' undeclared (first use in this function); did you mean 'OUT_STEPPER_EN_Pin'?
  134 |   HAL_GPIO_WritePin(OUT_STEPPER_STEP_GPIO_Port, OUT_STEPPER_STEP_Pin, GPIO_PIN_SET);
      |                                                 ^~~~~~~~~~~~~~~~~~~~
      |                                                 OUT_STEPPER_EN_Pin
../Core/Src/main.c: In function 'initialise':
../Core/Src/main.c:161:20: error: 'OUT_STEPPER_DIR_GPIO_Port' undeclared (first use in this function); did you mean 'OUT_SETPPER_DIR_GPIO_Port'?
  161 |  HAL_GPIO_WritePin(OUT_STEPPER_DIR_GPIO_Port, OUT_STEPPER_DIR_Pin, GPIO_SET);
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~
      |                    OUT_SETPPER_DIR_GPIO_Port
../Core/Src/main.c:161:47: error: 'OUT_STEPPER_DIR_Pin' undeclared (first use in this function); did you mean 'OUT_SETPPER_DIR_Pin'?
  161 |  HAL_GPIO_WritePin(OUT_STEPPER_DIR_GPIO_Port, OUT_STEPPER_DIR_Pin, GPIO_SET);
      |                                               ^~~~~~~~~~~~~~~~~~~
      |                                               OUT_SETPPER_DIR_Pin
../Core/Src/main.c:161:68: error: 'GPIO_SET' undeclared (first use in this function); did you mean 'GPIOE'?
  161 |  HAL_GPIO_WritePin(OUT_STEPPER_DIR_GPIO_Port, OUT_STEPPER_DIR_Pin, GPIO_SET);
      |                                                                    ^~~~~~~~
      |                                                                    GPIOE
../Core/Src/main.c: In function 'i2c_read':
../Core/Src/main.c:168:8: warning: implicit declaration of function 'HAL_I2C_Master_Transmit' [-Wimplicit-function-declaration]
  168 |  ret = HAL_I2C_Master_Transmit(&hi2c1, OPI_ADDR, buf, 1, HAL_MAX_DELAY);
      |        ^~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:168:33: error: 'hi2c1' undeclared (first use in this function)
  168 |  ret = HAL_I2C_Master_Transmit(&hi2c1, OPI_ADDR, buf, 1, HAL_MAX_DELAY);
      |                                 ^~~~~
../Core/Src/main.c:170:3: warning: implicit declaration of function 'strcpy' [-Wimplicit-function-declaration]
  170 |   strcpy((char*)buf, "Error Tx\r\n");
      |   ^~~~~~
../Core/Src/main.c:170:3: warning: incompatible implicit declaration of built-in function 'strcpy'
../Core/Src/main.c:21:1: note: include '<string.h>' or provide a declaration of 'strcpy'
   20 | #include "main.h"
  +++ |+#include <string.h>
   21 | 
../Core/Src/main.c:174:10: warning: implicit declaration of function 'HAL_I2C_Master_Receive' [-Wimplicit-function-declaration]
  174 |    ret = HAL_I2C_Master_Receive(&hi2c1, OPI_ADDR, buf, 2, HAL_MAX_DELAY);
      |          ^~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:176:5: warning: incompatible implicit declaration of built-in function 'strcpy'
  176 |     strcpy((char*)buf, "Error Rx\r\n");
      |     ^~~~~~
../Core/Src/main.c:176:5: note: include '<string.h>' or provide a declaration of 'strcpy'
../Core/Src/main.c:195:35: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
  195 |   HAL_UART_Transmit(&huart2, buf, strlen((char*)buf), HAL_MAX_DELAY);
      |                                   ^~~~~~
../Core/Src/main.c:195:35: warning: incompatible implicit declaration of built-in function 'strlen'
../Core/Src/main.c:195:35: note: include '<string.h>' or provide a declaration of 'strlen'
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.

17:23:50 Build Failed. 13 errors, 7 warnings. (took 676ms)

